# aoupy2

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-publish.yml
src/aoupy/: bucket.py
