[project]
name = "aoupy2"
version = "0.5.0"
description = ""
authors = [
    {name = "cakarac",email = "cakar.adnancihan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars (>=1.30.0,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
